@@ -14,6 +14,9 @@ introduced in the code and keeptrack of all tags.
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+08-Nov-2014, M. Karamitros (phys-ctor-em-V10-00-22)
+- Use G4MoleculeTable::GetModel rather than recreating molecules
+
 7-Nov-2014, V.Ivanchenko (phys-ctor-em-V10-00-21)
 - Use G4EmParameters used in low-energy constructors
 
